# rustberry-jukebox

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  blogpost.md
.cargo/: config
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  rust.yml
builder/: Dockerfile  build-builder-image.sh  build-librespot-java.sh  build.sh  run-builder-container.sh  rustberry-builder
builder/zero/: Dockerfile  blinkt  build-builder-image.sh  build.sh  run-builder-container.sh  rustberry-builder.pub
env/: mock.env
jukebox/jukeboxd/: .gitignore  Cargo.toml
jukebox/jukeboxd/src/: .gitignore  access_token_provider.rs  gpio.rs  gpio_sysfs.rs  lib.rs  main.rs  rfid.rs  server.rs  spotify_play.rs  spotify_util.rs  user_requests.rs
jukebox/spotify-player/: index.html
jukeboxd/: Cargo.toml
jukeboxd-ng/: Cargo.toml
jukeboxd-ng/src/: access_token_provider.rs  lib.rs  main.rs  player.rs
jukeboxd-ng/src/components/: access_token_provider.rs  mod.rs
jukeboxd-ng/src/components/spotify/: connect.rs
jukeboxd-ng/src/effects/: http_player.rs  led.rs  mod.rs  spotify_player.rs
jukeboxd-ng/src/effects/spotify/: connect.rs  player.rs
jukeboxd-ng/src/input_controller/: button.rs  mod.rs  playback.rs
jukeboxd-ng/src/spotify/: mod.rs
jukeboxd/src/: access_token_provider.rs  button_controller.rs  cache.rs  effects.rs  led_controller.rs  lib.rs  main.rs  playback_requests.rs  player.rs  rfid.rs  server.rs  spotify_connect.rs  spotify_play.rs  spotify_player.rs  spotify_util.rs
jukeboxd/src/bin_/: rfid-read.rs  rfid-watcher.rs  rustberry-rfid.rs  rustberry-write-spotify-uri.rs
jukeboxd/src/components/: access_token_provider.rs  mod.rs  rfid.rs  stream.rs
jukeboxd/src/effects/: http_player.rs  led.rs  mod.rs
jukeboxd/src/effects/spotify/: connect.rs  player.rs  util.rs
jukeboxd/src/input_controller/: button.rs  playback.rs  signals.rs
manifests/: .gitignore  configmap.yaml  cronjob.yaml  deployment.yaml  nginx.yaml  pvc-hotloading.yml  pvc.yaml
manifests/dbg/: dbg.yaml
manifests/dev/: configmap-conf.yaml  configmap.yaml  deployment.yaml  pv.yaml  pvc.yaml
manifests/rclone/: cronjob.yaml  dbg.yaml
scripts/: copy-dyn-libs  extract-bin  jukeboxd  jukeboxd-wrapper  patch-bin
src/: app_jukebox.rs  build-for-raspberry.sh  config.rs  led.rs  lib.rs  main.rs  meta_app.rs  player.rs
src/bin_/: rustberry-read-tag.rs  rustberry-rfid.rs
src/components/: access_token_provider.rs  config.rs  mod.rs  rfid.rs  tag_mapper.rs
src/effects/: file_player.rs  http_player.rs  led.rs  mod.rs
src/effects/spotify/: connect.rs  mod.rs  player.rs  util.rs
src/input_controller/: button.rs  event_transformer.rs  mod.rs  playback.rs  rfid_playback.rs
src/model/: config.rs
systemd/: jukeboxd.service  jukeboxd.wrapper
