[package]
name = "rustberry"
version = "0.2.4"
authors = ["Moritz Clasmeier <mtesseract@silverratio.net>"]
edition = "2018"
description = "Rustberry Jukebox"

[lib]
name = "rustberry"
path = "src/lib.rs"

[dependencies]
http = "0.2.1"
warp = "0.2.2"
nix = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.5"
futures-util = "0.3.5"
async-std = "1.6.1"
mime = "0.3"
dialoguer = "0.6"
tokio = {version = "0.2", features = ["full", "rt-threaded", "macros"]}
reqwest = {version = "0.10.4", features = ["blocking", "json", "stream"]}
rodio = "0.11"
failure = "0.1.8"
failure_derive = "0.1.8"
base64 = "0.10.1"
rfid-rs = { git = "https://gitlab.com/mclasmeier/rfid-rs" }
regex = "1"
spidev = "0.4.0"
envy = "0.4.0"
signal-hook = "0.1.10"
url = "2.1.0"
slog = "2.5.2"
slog-term = "2.4.1"
slog-async = "2.3.0"
slog-scope = "4.1.2"
gpio-cdev = "0.2"
sysfs_gpio = "0.5"
rmp = "^0.8"
bytes = "0.5.4"
async-trait = "0.1.30"
thiserror = "1.0"
anyhow = "1.0.31"
fehler = "1.0.0"
clap = "2.33.1"

[target.'cfg(target_arch = "arm")'.dependencies]
blinkt = { version = "0.5.0" }

[[bin]]
name = "jukeboxd"
path = "src/main.rs"
