[package]
name = "rustberry"
version = "0.2.0"
authors = ["Moritz Clasmeier <mtesseract@silverratio.net>"]
edition = "2018"

[lib]
name = "rustberry"
path = "src/lib.rs"

[dependencies]
http = "0.2"
# gotham = "0.4.0"
# gotham_derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.4"
futures = "0.3.4"
# hyper = "0.12"
mime = "0.3"
dialoguer = "0.4.0"
tokio = {version = "0.2.13", features = ["rt-threaded", "time"]}
reqwest = {version = "0.10.4", features = ["blocking", "json", "stream"]}
rodio = "0.11"
failure = "0.1.5"
base64 = "0.10.1"
rfid-rs = { git = "https://gitlab.com/mclasmeier/rfid-rs" }
regex = "1"
spidev = "0.4.0"
envy = "0.4.0"
signal-hook = "0.1.10"
url = "2.1.0"
slog = "2.5.2"
slog-term = "2.4.1"
slog-async = "2.3.0"
slog-scope = "4.1.2"
gpio-cdev = "0.2"
sysfs_gpio = "0.5"
rmp = "^0.8"
bytes = "0.5.4"

[[bin]]
name = "jukeboxd"
path = "src/main.rs"
