[package]
name = "jukeboxd"
version = "0.1.0"
authors = ["Moritz Clasmeier <mtesseract@silverratio.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.4.0"
gotham_derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.1"
hyper = "0.12"
mime = "0.3"
dialoguer = "0.4.0"
reqwest = "0.9.21"
failure = "0.1.5"
base64 = "0.10.1"
rfid-rs = "0.1.0"
envy = "0.4.0"
signal-hook = "0.1.10"
url = "2.1.0"
slog = "2.5.2"
slog-term = "2.4.1"
slog-async = "2.3.0"
slog-scope = "4.1.2"
gpio-cdev = "0.2"
